--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 
   body {
-   background-color: #2b2b2b;
+   background-color: #ffffff;
   }
 
   h1 {
-   color: #ff008d;
+   color: #221277;
    text-align: center;
-   font: italic 200% courier;
+   font: italic 200% gotham;
   }
 
   p {
